tests/specs/run/sourcemap_none/no_sourcemap.js.out
[WILDCARD]error: Uncaught[WILDCARD] Error: Test error without sourcemap
[WILDCARD]at throwError ([WILDCARD]no_sourcemap.js:3:[WILDCARD]
[WILDCARD]at [WILDCARD]no_sourcemap.js:6:[WILDCARD]
